<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="I0o-No-0XB">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="y1E-9Y-8f7">
            <objects>
                <viewController id="I0o-No-0XB" customClass="ViewController" customModule="RetirementCalculator" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Xci-me-k8f">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Monthly investments" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kkd-mV-8Qc">
                                <rect key="frame" x="20" y="59" width="353" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your current age" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Em-jy-YWg">
                                <rect key="frame" x="20" y="101" width="353" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your planned retirement age" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gxj-8L-vRH">
                                <rect key="frame" x="20" y="143" width="353" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Average interest rate of investments" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="50j-36-IC2">
                                <rect key="frame" x="20" y="185" width="353" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Current savings" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eU7-HW-Eaj">
                                <rect key="frame" x="20" y="227" width="353" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c0j-yN-bDm">
                                <rect key="frame" x="20" y="269" width="353" height="30"/>
                                <color key="backgroundColor" red="0.26274509800000001" green="0.57254901960000004" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Calculate retirement amount">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="calculateButton_TouchUpInside:" destination="I0o-No-0XB" eventType="touchUpInside" id="vSs-wx-NXe"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter some values to calculate your retirement amount." lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oHa-Kj-ZJA">
                                <rect key="frame" x="20" y="307" width="353" height="82"/>
                                <accessibility key="accessibilityConfiguration" identifier="resultLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="82" id="5dd-ce-VW1"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="VNd-iS-FGA"/>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="gxj-8L-vRH" firstAttribute="top" secondItem="6Em-jy-YWg" secondAttribute="bottom" constant="8" id="3Ma-WR-wwJ"/>
                            <constraint firstItem="VNd-iS-FGA" firstAttribute="trailing" secondItem="c0j-yN-bDm" secondAttribute="trailing" constant="20" id="4G5-SI-zM8"/>
                            <constraint firstItem="VNd-iS-FGA" firstAttribute="trailing" secondItem="gxj-8L-vRH" secondAttribute="trailing" constant="20" id="BVR-oX-Vez"/>
                            <constraint firstItem="6Em-jy-YWg" firstAttribute="top" secondItem="kkd-mV-8Qc" secondAttribute="bottom" constant="8" id="Cew-kJ-30l"/>
                            <constraint firstItem="50j-36-IC2" firstAttribute="top" secondItem="gxj-8L-vRH" secondAttribute="bottom" constant="8" id="EAu-pe-ZWf"/>
                            <constraint firstItem="eU7-HW-Eaj" firstAttribute="leading" secondItem="VNd-iS-FGA" secondAttribute="leading" constant="20" id="HUB-52-QVu"/>
                            <constraint firstItem="c0j-yN-bDm" firstAttribute="leading" secondItem="VNd-iS-FGA" secondAttribute="leading" constant="20" id="KAG-eg-FYm"/>
                            <constraint firstItem="c0j-yN-bDm" firstAttribute="top" secondItem="eU7-HW-Eaj" secondAttribute="bottom" constant="8" id="KpR-MF-9a8"/>
                            <constraint firstItem="oHa-Kj-ZJA" firstAttribute="top" secondItem="c0j-yN-bDm" secondAttribute="bottom" constant="8" id="OO2-9w-JrE"/>
                            <constraint firstItem="50j-36-IC2" firstAttribute="leading" secondItem="VNd-iS-FGA" secondAttribute="leading" constant="20" id="SaM-jb-e4A"/>
                            <constraint firstItem="VNd-iS-FGA" firstAttribute="trailing" secondItem="eU7-HW-Eaj" secondAttribute="trailing" constant="20" id="Y2s-92-yiT"/>
                            <constraint firstItem="kkd-mV-8Qc" firstAttribute="top" secondItem="VNd-iS-FGA" secondAttribute="top" id="eyR-v4-OZT"/>
                            <constraint firstItem="gxj-8L-vRH" firstAttribute="leading" secondItem="VNd-iS-FGA" secondAttribute="leading" constant="20" id="gJy-t0-9z1"/>
                            <constraint firstItem="kkd-mV-8Qc" firstAttribute="leading" secondItem="VNd-iS-FGA" secondAttribute="leading" constant="20" id="gRt-4T-iyz"/>
                            <constraint firstItem="6Em-jy-YWg" firstAttribute="leading" secondItem="VNd-iS-FGA" secondAttribute="leading" constant="20" id="hEM-KW-Aso"/>
                            <constraint firstItem="VNd-iS-FGA" firstAttribute="trailing" secondItem="kkd-mV-8Qc" secondAttribute="trailing" constant="20" id="kvB-Xw-73f"/>
                            <constraint firstItem="VNd-iS-FGA" firstAttribute="trailing" secondItem="oHa-Kj-ZJA" secondAttribute="trailing" constant="20" id="mof-kZ-zaB"/>
                            <constraint firstItem="VNd-iS-FGA" firstAttribute="trailing" secondItem="6Em-jy-YWg" secondAttribute="trailing" constant="20" id="uTc-cP-e36"/>
                            <constraint firstItem="eU7-HW-Eaj" firstAttribute="top" secondItem="50j-36-IC2" secondAttribute="bottom" constant="8" id="ugB-7c-t4O"/>
                            <constraint firstItem="oHa-Kj-ZJA" firstAttribute="leading" secondItem="VNd-iS-FGA" secondAttribute="leading" constant="20" id="wKj-hn-ETY"/>
                            <constraint firstItem="VNd-iS-FGA" firstAttribute="trailing" secondItem="50j-36-IC2" secondAttribute="trailing" constant="20" id="xVw-7e-nsA"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="ageTextField" destination="6Em-jy-YWg" id="rfD-rE-6cS"/>
                        <outlet property="interestRateTextField" destination="50j-36-IC2" id="4j5-Ab-57R"/>
                        <outlet property="monthlyInvestmentsTextField" destination="kkd-mV-8Qc" id="Fh3-Px-K6b"/>
                        <outlet property="resultLabel" destination="oHa-Kj-ZJA" id="AZM-DI-3PC"/>
                        <outlet property="retirementAgeTextField" destination="gxj-8L-vRH" id="wX7-kD-LxA"/>
                        <outlet property="savingsTextField" destination="eU7-HW-Eaj" id="TcL-sd-gJL"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="1Cj-4i-DNQ" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
        </scene>
    </scenes>
</document>
